# yogger

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements-doc.txt  setup.py
.github/: .gitignore
.github/ISSUE_TEMPLATE/: bug_report.yaml  bug_report.yml
.github/actions/: .gitignore
.github/actions/build_yogger/: action.yml
.github/actions/run-tests/: action.yml
.github/workflows/: ubuntu.yml
ci/: .gitignore  pre_commit.sh
doc/: config.json  render_readme.py
doc/templates/: .gitignore  body.md  header.md.j2  install.md  library.md  library.md.j2  main.md  usage.md
docs/: config.json  render_readme.py
docs/doc/templates/: body.md.j2
docs/templates/: body.md.j2  body.md.jinja  header.md.j2  header.md.jinja  install.md.jinja  library.md.j2  library.md.jinja  main.md.j2  main.md.jinja  requirements.md.j2  requirements.md.jinja  usage.md.jinja
src/: .gitignore
src/yogger/: .gitignore  __init__.py  base.py  compat.py  constants.py  pformat.py
tests/: .gitignore  test_pformat.py
