[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yogger"
description = "Minimal logging setup with utilities to represent interpreter stacks."
readme = "README.md"
requires-python = ">=3.9,<4"
license = {text = "GPL-3.0-or-later"}
keywords = ["logging", "inspect", "trace", "stack", "locals", "dump", "dumps", "yogger"]
authors = [
    {name = "Nicholas Londowski", email = "nick@phosmic.com"},
    {name = "Francis Salerno", email = "frank@phosmic.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
    "Topic :: System :: Logging",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []
dynamic = ["version"]

[tool.setuptools]
packages = ["yogger"]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "yogger.__version__"}

[project.urls]
Homepage = "https://pypi.org/project/yogger/"
Repository = "https://github.com/Phosmic/yogger"
Issues = "https://github.com/Phosmic/yogger/issues"
